# cpp-ut-project

./: .hgignore  CMakeLists.txt  ExportLite.ps1  ProjectHome.md  ProjectVar.txt  UpdateHistory.md  build.ps1  readme.txt
UserModule/: AddClass.ps1  AddTest.ps1  ProjectVar.txt  premake4.lua  tools.lua
UserModule/include/UserModule/: HelloWorld.h  UserHeader.h  UserModule.h  decls.h
UserModule/src/: CMakeLists.txt
UserModule/test/: CMakeLists.txt  HelloWorldTest.h  SampleFeatureTest.h
cmake_version/UserModule/: AddClass.ps1  AddTest.ps1  CMakeLists.txt
cmake_version/UserModule/src/: CMakeLists.txt
cmake_version/UserModule/test/: IT_HelloWorld.h  UT_HelloWorld.h
cmake_version/tools/scripts/: Template.h  TestTemplate.h
premake_version/UserModule/: build.ps1  premake4.lua  readme.txt
premake_version/UserModule/src/: HelloWorld.cpp
premake_version/UserModule/test/: IT_HelloWorld.h  UT_HelloWorld.h
premake_version/tools/scripts/: AddCppClass.ps1  AddTestFile.ps1  Template.h  addclass.lua  addfile.lua  premake-testngpp.lua  setVars.ps1  testngpp.lua
src/: HelloWorld.cpp
test/: CMakeLists.txt  IT_HelloWorld.h  UT_HelloWorld.h
tools/scripts/: AddCppClass.ps1  AddTestFile.ps1  Template.cpp  TemplateTest.h  addfile.lua  install.lua  options.lua  project.lua  release.lua  setVars.ps1  testngpp.lua
